[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyforge"
version = "0.1.0"
description = "Auto test generator for Python files (pytest)"
requires-python = ">=3.11"

[project.scripts]
pyforge = "pyforge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["pyforge"]
omit = [
    "pyforge/renderers/*",
    "pyforge/__main__.py",
    "pyforge/cli.py",
    "pyforge/runtime/*",
]

[tool.coverage.report]
fail_under = 90
