[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyforge"
version = "0.1.0"
description = "Auto test generator for Python files (pytest)"
requires-python = ">=3.11"

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.scripts]
pyforge = "pyforge.cli:main"
pyforge-mcp = "pyforge.mcp_server:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.coverage.run]
source = ["pyforge"]
omit = [
    "pyforge/renderers/*",
    "pyforge/__main__.py",
    "pyforge/cli.py",
    "pyforge/mcp_server.py",
    "pyforge/runtime/*",
]

[tool.coverage.report]
fail_under = 90
